*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@711 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -26,6 +26,12 @@ PyX
     - TODO: remove the support for variables given within the argument dictionary in data constructor
     - TODO: graph keys; titles in data/function/etc.
     - TODO: 3d graphs --- leave it for pyx-0.4
+  - unit module:
+    - new classes for visual and width lengths, aliases for user length (u_pt = pt)
+    - TODO: document me!
+  - bbox module:
+    - new methods height and width
+    - TODO: document me!
   - data module:
     - TODO: line reduction for datafile like the every parameter in gnuplot
   - canvas module:
