canvas.insert now supports arguments
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@719 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -38,7 +38,9 @@ PyX
   - canvas module:
     - new way of PS prolog generation that writes only necessary parts
     - added support for patterns 
+    - canvas.insert() now supports arguments
     - TODO: document patterns
+    - TODO: document new canvas.insert()
     - TODO: prolog should return empty lists instead of None
   - mathtree module:
     - added abs function
