--- a/CHANGES
+++ b/CHANGES
@@ -29,7 +29,9 @@ PyX
     - TODO: exceptions in drawsymbol & friends...
   - unit module:
     - new classes for visual and width lengths, aliases for user length (u_pt = pt)
-    - TODO: document me!
+    - all subclasses of length now default to a length of 1 in the respective units
+      (instead of 0), such that, for instance, 5*unit.t_cm() == unit.t_cm(5)
+    - default_unit now has to be set via unit.set. For instance: unit.set(default_unit="m").
   - bbox module:
     - new methods height and width
     - TODO: document me!
