--- a/manual/mathtree.tex
+++ b/manual/mathtree.tex
@@ -13,13 +13,13 @@ variable names here here.
 \verb|+|; \verb|-|; \verb|*|; \verb|/|; \verb|**| and \verb|^| (both
 for power)
 \item[Functions:]
-\verb|neg| (negate); \verb|sgn| (signum); \verb|sqrt| (square root);
-\verb|exp|; \verb|log| (natural logarithm); \verb|sin|, \verb|cos|,
-\verb|tan|, \verb|asin|, \verb|acos|, \verb|atan| (trigonometric
-functions in radian units); \verb|sind|, \verb|cosd|, \verb|tand|,
-\verb|asind|, \verb|acosd|, \verb|atand| (as before but in degree
-units); \verb|norm| ($\sqrt{a^2+b^2}$ as an example for functions with
-multiple arguments)
+\verb|neg| (negate); \verb|abs| (absolute value); \verb|sgn| (signum);
+\verb|sqrt| (square root); \verb|exp|; \verb|log| (natural logarithm);
+\verb|sin|, \verb|cos|, \verb|tan|, \verb|asin|, \verb|acos|,
+\verb|atan| (trigonometric functions in radian units); \verb|sind|,
+\verb|cosd|, \verb|tand|, \verb|asind|, \verb|acosd|, \verb|atand| (as
+before but in degree units); \verb|norm| ($\sqrt{a^2+b^2}$ as an
+example for functions with multiple arguments)
 \item[predefined variables:]
 \verb|pi| ($\pi$); \verb|e| ($e$)
 \end{description}
