*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@733 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/unit.tex
+++ b/manual/unit.tex
@@ -72,8 +72,8 @@ a numerical factor and converted to a string.
 
 A number of subclasses of \verb|length| are already predefined.  They
 only differ in their defaults for \verb|type| and \verb|unit|. Note
-that again the default value for the quantifier is \verb|1|, such that, for
-instance, \texttt{5*m(1)==m(5)}.
+that again the default value for the quantifier is \verb|1|, such
+that, for instance, \texttt{5*m(1)==m(5)}.
 
 \medskip
 \begin{center}
