color.gradient -> color.palette
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@754 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/color.tex
+++ b/manual/color.tex
@@ -37,14 +37,14 @@ The file \verb|color.eps| is created and looks like:
 \includegraphics{color}
 \end{quote}
 
-\section{Color gradients}
+\section{Color palettes}
 
-The color module provides a class \verb|gradient|. The constructor of
+The color module provides a class \verb|palette|. The constructor of
 that class receives two colors from the same color model and two
 named parameters \verb|min| and \verb|max|, which are set to \verb|0|
 and \verb|1| by default. Between those colors a linear interpolation
 takes place by the method \verb|getcolor| depending on a value between
 \verb|min| and \verb|max|.
 
-A list of named gradients is available in appendix~\ref{gradientname}.
+A list of named palettes is available in appendix~\ref{palettename}.
 
