--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -25,6 +25,6 @@ Andr\'e Wobst \texttt{<wobsta@users.sourceforge.net>}}
 \appendix
 \include{mathtree}
 \include{colorname}
-\include{gradientname}
+\include{palettename}
 \include{pathstyles}
 \end{document}
