gradient -> palette in CHANGES
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@756 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -56,6 +56,8 @@ PyX
   - mathtree module:
     - added abs function
     - changed the handling of extern functions and all variables
+  - color module:
+    - gradient renamed to palette
   - numerous bugfixes:
     - problem with sizefile on windows (tex module)
     - allow for strings in graphxy's width and height; allow for width only (graph module)
