added round join in lineattrs
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@760 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -640,8 +640,8 @@ data name&description\\
 
 The class \verb|line| is inherited from \verb|symbol| and is restricted
 to line drawing. The constructor takes only \verb|lineattrs| and its
-default is set to \verb|changelinestyle()|. The other features of the
-symbol style are turned off.
+default is set to \verb|(changelinestyle(), canvas.linejoin.round)|.
+The other features of the symbol style are turned off.
 
 \subsection{Rectangles}
 
