- enlarge now also allows selective enlargement to the left, bottom, right and top - output HiResBoundingBox - never reduce bounding box upon output to file
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@761 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/CHANGES
+++ b/CHANGES
@@ -41,6 +41,9 @@ PyX
   - bbox module:
     - new methods height, width, top, bottom, left, right
     - ll & ur ???, what about ul and lr -> ugly!
+    - enlarge (was enhance) now allows selective enlargement to the left, bottom, right and top
+    - output HiResBoundingBox
+    - never reduce bbox upon output
     - TODO: document me!
   - epsfile module:
     - new constructor signature, more in line with rest of PyX: 
