--- a/manual/graph.tex
+++ b/manual/graph.tex
@@ -505,7 +505,7 @@ without reading the file several times which would just be a bad
 design. However, for easy usage, it is possible to provide a filename
 instead of a datafile as the first argument to the constructor of the
 class \verb|data| hiding the underlying \verb|datafile| instance
-completely from view. This is the preverable solution as long as the
+completely from view. This is the preferable solution as long as the
 datafile gets used only once.
 
 The additional parameters of the constructor of the class \verb|data|
@@ -607,7 +607,7 @@ argument name&default&description\\
 \medskip
 
 The parameter \verb|symbol| has to be a routine, which returns a path to
-be drawn (e.g. stoked or filled). There are several those routines
+be drawn (e.g. stroked or filled). There are several such routines
 already available in the class \verb|symbol|, namely \verb|cross|,
 \verb|plus|, \verb|square|, \verb|triangle|, \verb|circle|, and
 \verb|diamond|. Furthermore, changeable attributes might be used here
