--- a/manual/path.tex
+++ b/manual/path.tex
@@ -2,7 +2,7 @@
 
 \label{path}
 
-With help of the path module it is possible to construct PostScript like 
+With the help of the path module it is possible to construct PostScript like 
 paths, which are one of the main building blocks for the generation of 
 drawings. To that end it provides 
 \begin{itemize}
@@ -29,24 +29,23 @@ Subclass of \texttt{pathel} & function \\
 \texttt{closepath()} & closes current subpath \\
 \texttt{moveto(x, y)} & sets current point to (\texttt{x},
 \texttt{y})\\
-\texttt{rmoveto(dx, dy)} & moves current point relative by (\texttt{dx},
+\texttt{rmoveto(dx, dy)} & moves current point by (\texttt{dx},
 \texttt{dy})\\
-\texttt{lineto(x, y)} & appends straight line from current point to
-(\texttt{x}, \texttt{y})\\
-\texttt{rlineto(dx, dy)} & appends straight line from current point
-relative by (\texttt{dx}, \texttt{dy})\\
+\texttt{lineto(x, y)} & moves current point to (\texttt{x}, \texttt{y})
+while drawing a straight line\\
+\texttt{rlineto(dx, dy)} & moves current point by by (\texttt{dx}, \texttt{dy})
+while drawing a straight line\\
 \texttt{arc(x, y, r, \newline\phantom{arc(}angle1, angle2)} & appends arc segment in
 counterclockwise direction with center (\texttt{x}, \texttt{y}) and
 radius~\texttt{r} from \texttt{angle1} to \texttt{angle2} (in degrees).\\
 \texttt{arcn(x, y, r, \newline\phantom{arcn(}angle1, angle2)} & appends arc segment in
 clockwise direction with center (\texttt{x}, \texttt{y}) and
 radius~\texttt{r} from \texttt{angle1} to \texttt{angle2} (in degrees). \\
-\texttt{arct(x1, y1, x2, y2, r)} & appends arc segment with radius \texttt{r}
-which connects between (\texttt{x1}, \texttt{y1}) and (\texttt{x2},
-\texttt{y2}).\\
+\texttt{arct(x1, y1, x2, y2, r)} & appends arc segment of radius \texttt{r}
+connecting between (\texttt{x1}, \texttt{y1}) and (\texttt{x2}, \texttt{y2}).\\
 \texttt{rcurveto(dx1, dy1, \newline\phantom{rcurveto(}dx2, dy2,\newline\phantom{rcurveto(}dx3, dy3)} & appends a B\'ezier curve with
-the control points current point, and the points defined relative to
-the current point by (\texttt{dx1}, \texttt{dy1}), 
+the following four control points: current point and the points defined 
+relative to the current point by (\texttt{dx1}, \texttt{dy1}), 
 (\texttt{dx2}, \texttt{dy2}), and (\texttt{dx3}, \texttt{dy3})
 \end{tabularx}
 \medskip
@@ -57,16 +56,17 @@ Some notes on the above:
 \item If the current point is defined before an \verb|arc| or
   \verb|arcn| command, a straight line from current point to the
   beginning of the arc is prepended.
-\item The bounding box (see below) of B\'ezier curves is actually only
-  the control box, \textit{i.e.}\ not neccesarily the smallest
-  enclosing rectangle.
+\item The bounding box (see below) of B\'ezier curves is actually 
+  the box enclosing the control points, \textit{i.e.}\ not neccesarily the 
+  smallest rectangle enclosing the B\'ezier curve.
 \end{itemize}
 
 
 \section{Class path}
 
-The class path represents PostScript like paths in \PyX. The \verb|path| constructor allows the 
-creation of such a path out of series of \verb|pathel|s. A simple example, which generates a triangle,
+The class path represents PostScript like paths in \PyX. The \verb|path| 
+constructor allows the creation of such a path out of a series of 
+\verb|pathel|s. The following simple example generates a triangle:
 looks like:
 \begin{quote}
 \begin{verbatim}
@@ -81,7 +81,7 @@ p = path(moveto(0, 0),
 \end{quote}
 Later on, we shall see, how it is possible to output such a path on a
 canvas. For the moment, we only want to discuss the methods provided
-by the \verb|path| class. This range from standard operation like the
+by the \verb|path| class. These range from standard operations like the
 determination of the length of a path via \verb|len(p)|, fetching of
 items using \verb|p[index]| and the possibility to concatenate two
 paths, \verb|p1 + p2|, append further \verb|pathel|s using
@@ -95,7 +95,8 @@ XXX terminology: subpath, \dots
   \texttt{path} method & function \\
   \hline \texttt{\_\_init\_\_(*pathels)} & construct new \texttt{path}
   consisting of \texttt{pathels}\\
-  \texttt{append(pathel)} & appends \texttt{pathel} to end of \texttt{path}\\
+  \texttt{append(pathel)} & appends \texttt{pathel} to the end of 
+  \texttt{path}\\
   \texttt{arclength(epsilon=1e-5)} & returns the total arc length of
   all \texttt{path} segments in PostScript points with accuracy
   \texttt{epsilon}.$^\dagger$\\
@@ -111,7 +112,7 @@ XXX terminology: subpath, \dots
   \texttt{opath}, \textit{i.e.}\ the last subpath of \texttt{path}
   and the first one of \texttt{opath} are joined.$^\dagger$\\
   \texttt{intersect(opath, \newline\phantom{intersect(}epsilon=1e-5)}
-  & returns tuple consisting of two list of parameter values
+  & returns tuple consisting of two lists of parameter values
   corresponding to the
   intersection points of \texttt{path} and \texttt{opath}, respectively.$^\dagger$\\
   \texttt{reversed()} & returns the normalized reversed
@@ -134,10 +135,10 @@ Some notes on the above:
   the B\'ezier curve is returned.
 \item The $\dagger$ denotes methods which require a prior
   conversion of the path into a \verb|normpath| instance. This is
-  done automatically, but if you need many to call such methods often,
+  done automatically, but if you need to call such methods often,
   it is a good idea to do the conversion once for performance reasons.
 \item Instead of using the \verb|glue| method, you can also glue two
-paths together with help of the \verb|<<| opertor, for instance
+paths together with help of the \verb|<<| operator, for instance
 \verb|p = p1 << p2|.
 \end{itemize}
 
@@ -146,8 +147,8 @@ paths together with help of the \verb|<<| opertor, for instance
 The \texttt{normpath} class represents a specialized form of a
 \texttt{path} containing only the elements \verb|moveto|,
 \verb|lineto|, \verb|curveto| and \verb|closepath|. Such normalized
-paths are used during all of the more sophisticated path operations,
-namely precisely those which are denoted by a $\dagger$ in the above table.
+paths are used during all of the more sophisticated path operations
+which are denoted by a $\dagger$ in the above table.
 
 
 Any path can
@@ -160,7 +161,7 @@ np = normpath(p)
 \end{quote}
 Alternatively, by passing a series of \texttt{pathel}s to the constructor, a
 \texttt{normpath} can be constructed like a generic \texttt{path}.
-Addition of a \verb|normpath| and a \verb|path| always yields a
+The sum of a \verb|normpath| and a \verb|path| always yields a
 \verb|normpath|.
 
 \section{Subclasses of path}
