--- a/CHANGES
+++ b/CHANGES
@@ -54,7 +54,9 @@ PyX
     - new way of PS prolog generation that writes only necessary parts
     - added support for patterns
     - canvas.insert() now supports arguments
-    - TODO: document patterns
+    - bbox of canvas can be specified in writetofile command explicitely
+    - writetofile does not return self anymore
+    - TODO: document patterns and new writetofile syntax
   - mathtree module:
     - added abs function
     - changed the handling of extern functions and all variables
